fix layout issues in header mostly

--- a/src/assets/scss/cmp/_header.scss
+++ b/src/assets/scss/cmp/_header.scss
@@ -5,8 +5,7 @@ header {
 
     grid-template-columns:
         var(--margin-x-mobile)
-        auto
-        auto
+        1fr
         var(--margin-x-mobile);
 
     grid-template-rows: 48px auto;
@@ -26,7 +25,7 @@ header {
     }
 
     .hamburger {
-        grid-area: 2 / 3;
+        grid-area: 2 / 2;
         justify-self: end;
     }
 
