--- a/src/assets/scss/cmp/_homepage-section-1.scss
+++ b/src/assets/scss/cmp/_homepage-section-1.scss
@@ -27,6 +27,7 @@
         grid-area: 1 / 1 / -1 / -1;
         align-self: end;
         justify-self: center;
+        max-width: 100%;
     }
 
     .pattern-1 {
